--- a/presentation.css
+++ b/presentation.css
@@ -1,15 +1,21 @@
 html {
   font-size: 62.5%;
 }
+
 body {
-    background-color: #f1f1f1;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: rgb(239, 231, 224);
 }
 
-main {
-    background-color: rgb(255, 255, 255);
-
+header {
+  background-color: #171717;
+  color: #fff;
 }
+
+li > a {
+  color: aquamarine;
+}
+
 h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 7.2rem;
@@ -18,27 +24,32 @@ h2 {
   font-size: 3.2rem;
 }
 
+h3 {
+  font-size: 2.8rem;
+}
+
 p,
 a {
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 
-a.btn {
-  text-decoration: none;
-  color: rgb(119, 171, 175);
-  text-transform: uppercase;
-}
-
-a.card {
+.card > a {
   text-decoration: none;
   color: black;
 }
 
+.card .btn {
+  text-align: center;
+}
+
+iframe {
+  border: none;
+}
 footer {
   background-image: url(pictures/cosmetics-7050541_1280.jpeg);
 }
 
-  /*alla p som är i footer*/
+/*alla p som är i footer*/
 footer p {
   font-size: 2rem;
 }
