--- a/presentation.css
+++ b/presentation.css
@@ -45,11 +45,48 @@ a {
 iframe {
   border: none;
 }
-footer {
+
+
+.footer {
+  position: relative; 
+  width: 100%;
+  height: 12rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-image: url(pictures/cosmetics-7050541_1280.jpeg);
+  background-size: cover;
 }
 
-/*alla p som är i footer*/
-footer p {
-  font-size: 2rem;
+.footer::before {    
+    content: "";
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
+
+.footer p {
+position: relative;
+color: #000000;
+font-size: 2rem;
+text-align: center;
+}
+
+
+
+/* 
+div.footer {
+  background-image: url(pictures/cosmetics-7050541_1280.jpeg);
+  width: 50px;
+
+
+All <p> elements that are within the .footer class 
+.footer p {
+  font-size: 2rem;
+
+}
+*/
+
