--- a/presentation.css
+++ b/presentation.css
@@ -7,25 +7,42 @@ body {
   background-color: rgb(239, 231, 224);
 }
 
+/*Header och Navigation*/
 header {
   background-color: #171717;
   color: #fff;
 }
 
-li > a {
-  color: aquamarine;
+nav ul {
+  list-style: none;
 }
 
+nav a {
+  color: rgb(116, 79, 236);
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 600;
+}
+/*Main*/
+
+/*Text styling allmänt*/
+h1::first-letter,
+h2::first-letter,
+h3::first-letter,
+p::first-letter {
+  text-transform: capitalize;
+}
 h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 7.2rem;
 }
+
 h2 {
   font-size: 3.2rem;
 }
 
 h3 {
-  font-size: 2.8rem;
+  font-size: 2rem;
 }
 
 p,
@@ -33,60 +50,44 @@ a {
   font-size: 1.6rem;
 }
 
+/*HOW-TO´S hela artikel containern med rubrik, stycke och artiklarna (klass card)*/
+
 .card > a {
   text-decoration: none;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
-.card .btn {
-  text-align: center;
+.card h3 {
+  text-transform: uppercase;
+  margin: 1rem;
+}
+.card p {
+  margin: 1rem;
 }
 
+p.btn {
+  text-decoration: none;
+  text-transform: capitalize;
+  background-color: rgb(222, 222, 240);
+  border: 1px solid rgb(0, 0, 0);
+}
+
+/* Videos på sidan där tutorials skall visas*/
 iframe {
   border: none;
 }
 
-
+/* Footer*/
 .footer {
-  position: relative; 
-  width: 100%;
-  height: 12rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-image: url(pictures/cosmetics-7050541_1280.jpeg);
   background-size: cover;
 }
 
-.footer::before {    
-    content: "";
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    background-color: rgba(255, 255, 255, 0.5);
+.footer::before {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .footer p {
-position: relative;
-color: #000000;
-font-size: 2rem;
-text-align: center;
-}
-
-
-
-/* 
-div.footer {
-  background-image: url(pictures/cosmetics-7050541_1280.jpeg);
-  width: 50px;
-
-
-All <p> elements that are within the .footer class 
-.footer p {
+  color: #000000;
   font-size: 2rem;
-
 }
-*/
-
