--- a/presentation.css
+++ b/presentation.css
@@ -1,3 +1,5 @@
+
+/*---------------------------Allmänt---------------------------*/
 html {
   font-size: 62.5%;
 }
@@ -7,7 +9,7 @@ body {
   background-color: rgb(239, 231, 224);
 }
 
-/*Header och Navigation*/
+/*---------------------------Header and navigation---------------------------*/
 header {
   background-color: #171717;
   color: #fff;
@@ -23,15 +25,24 @@ nav a {
   text-decoration: none;
   font-weight: 600;
 }
-/*Main*/
 
-/*Text styling allmänt*/
+/*---------------------------Main---------------------------*/
+section#tutorials,
+section#how-to,
+section#about {
+  border: 2px solid rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
+  border-radius: 25px;
+}
+
+/*---------------------------Text styling allmänt---------------------------*/
 h1::first-letter,
 h2::first-letter,
 h3::first-letter,
 p::first-letter {
   text-transform: capitalize;
 }
+
 h1 {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 7.2rem;
@@ -50,15 +61,16 @@ a {
   font-size: 1.6rem;
 }
 
-/*HOW-TO´S hela artikel containern med rubrik, stycke och artiklarna (klass card)*/
-
-.article-container {
-  border: 2px solid rgb(255, 255, 255);
-  background-color: rgb(255, 255, 255);
-  border-radius: 25px;
+/*---------------------------Start page---------------------------*/
+#how-to {
   padding: 2rem;
-  object-fit: cover;
 }
+
+.uppercase{
+  text-transform: uppercase;
+
+}
+
 .card > a {
   text-decoration: none;
   color: rgb(0, 0, 0);
@@ -80,12 +92,15 @@ p.btn {
   border: 1px solid rgb(0, 0, 0);
 }
 
-/* Videos på sidan där tutorials skall visas*/
+/*---------------------------Tutorial page---------------------------*/
 iframe {
   border: none;
 }
+#tutorials ul {
+  list-style: none; /* Remove the list style */
+}
 
-/* Footer*/
+/*---------------------------Footer---------------------------*/
 .footer {
   background-image: url(pictures/cosmetics-7050541_1280.jpeg);
   background-size: cover;
